fixed header spacing problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,19 +73,20 @@ h1 {
 
 /* Score Styles */
 .score-header {
-	margin-left: -1em;
+	margin-left: 0;
 	padding-right: 2em;
+	background-color: #4aaaa5;
+	color: #fff;
 }
 
 .total-score-header {
 	margin: 0 auto;
 	padding: .3em 1em .3em .3em;
-	background-color: #4aaaa5;
-	color: #fff;
+	
 }
 
 #total-score-box {
-	padding: 4em;
+	padding: 4em 0;
 	margin: .5em 1em .5em 0;
 	background-color: #4aaaa5;
 	color: #fff;
